--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,9 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.tmux/plugins
 # 💻 [pluggins]
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'Nybkox/tmux-kanagawa'
+# set -g @plugin 'fabioluciano/tmux-tokyo-night'
 # set -g @plugin 'nikolovlazar/tokyo-night-tmux'
 
 # 🎨 [color-scheme]
@@ -13,13 +15,26 @@ set-option -ga terminal-overrides ",xterm*:Tc"
 set -g default-terminal "screen-256color"
 set-option -g status-bg default
 
+
+# 🛠️ [config color-scheme]
+set -g @kanagawa-theme 'dragon'
+set -g @kanagawa-plugins "battery git"
+set -g @kanagawa-ignore-window-colors true
+set -g @kanagawa-show-powerline true
+set -g @kanagawa-show-timezone false
+set -g @kanagawa-battery-label "⚡️"
+set -g @kanagawa-battery-colors "red dark_gray"
+
+
+# [theme config tmux-tokyo-night]
 # set -g @tokyo-night-tmux_window_id_style fsquare
 # set -g @tokyo-night-tmux_pane_id_style hsquare
 # set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 
-set -g @theme_variation 'storm'
-set -g @theme_plugins 'battery'
+# [theme config tokio-night-tmux]
+# set -g @theme_variation 'storm'
+# set -g @theme_plugins 'battery'
 # set -g @theme_transparent_status_bar 'true'
 
 
@@ -48,11 +63,12 @@ set -g mode-keys vi
 set -g status on
 set -g mouse on
 
-
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# set -g window-status-format "#W"
 
 
 # 📟 [float terminal]
@@ -60,7 +76,7 @@ bind g if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
 } {
 # open in the same directory of the current pane
-  display-popup -d "#{pane_current_path}" -E "tmux new-session -A -s terminal"
+  display-popup -d "#{pane_current_path}" -E "tmux new-session -A -s work"
 }
 
 
