--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,6 +44,7 @@ unbind C-b
 bind C-a send-prefix
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "reload success"
+bind-key c new-window -c "#{pane_current_path}"
 
 unbind '\'
 unbind z
