--- a/ghostty/config
+++ b/ghostty/config
@@ -1,19 +1,22 @@
-######################################
- 
-#           SV TECH - CODE 
- 
-######################################
+# ######################################
+#                                      #
+#           SV TECH - CODE             #
+#                                      #
+# ######################################
 
+# 🚀 [shell]
 shell-integration = zsh
+
+
+# 🖼️ [themes]
+theme = tokyonight_night
 # theme = MaterialOcean
 # theme = catppuccin-mocha
 # theme = Kanagawa Dragon
-theme = tokyonight_night
 # theme = rose-pine
-# theme = svtech-code
 
 
-# 🖥️ [windows] 
+# # 🖥️ [windows] 
 macos-titlebar-style = hidden
 window-height = 29
 window-width = 118
@@ -21,31 +24,49 @@ window-padding-x = 10
 window-padding-y = 10
 window-padding-balance = true
 confirm-close-surface = false
+window-step-resize = true
+# # window-save-state = always
 
 
 # 🎨 [background]
 background-opacity = 0.9
 resize-overlay = always
 background-blur-radius = 12
+split-divider-color = #66cccc
 
 
 # 📇 [fonts]
 font-family = "Cascadia Code NF"
 font-feature = -liga
-font-size = 22
+font-size = 23
 
 
-# 🛠️ [other]
+# 📌 [mouse and cursor] 
+# cursor-color = #59ffd1
 mouse-scroll-multiplier = 2
 mouse-hide-while-typing = true
 
 
-# 📌 [cursor] 
-# cursor-color = #59ffd1
-
-
-# 👾 quick terminal 
-keybind = global:cmd+s=toggle_quick_terminal
-# quick-terminal-position = bottom
+# 👾 [quick terminal]
 quick-terminal-position = center
+quick-terminal-autohide = false
+quick-terminal-screen = main
+quick-terminal-space-behavior = remain
 
+
+# 🛠️ [kaybinds]
+keybind = global:cmd+s=toggle_quick_terminal
+keybind = cmd+z=toggle_split_zoom
+
+keybind = cmd+left=goto_split:left
+keybind = cmd+right=goto_split:right
+keybind = cmd+up=goto_split:up
+keybind = cmd+down=goto_split:down
+
+keybind = cmd+e=equalize_splits
+keybind = global:cmd+g=toggle_visibility
+keybind = cmd+f=toggle_fullscreen
+
+keybind = cmd+,=text:nvim ~/.config/ghostty/config\n
+
+keybind = cmd+x=text:toggle_ghostty_opacity\n
